--- a/css/about.css
+++ b/css/about.css
@@ -58,3 +58,16 @@
 .skills-list li {
     color: var(--text-secondary);
 }
+
+@media (max-width: 768px) {
+
+    .about-page {
+        padding-top: 140px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .about-content {
+        font-size: 1rem;
+    }
+}
